# fast_api_todo_app

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/: migrate_db.py
api/cruds/: done.py  task.py
api/routers/: done.py  task.py
api/schemas/: task.py
tests/: test_main.py
